@@ -7,6 +7,9 @@ cdebconf (0.80) UNRELEASED; urgency=low
       debconf-dumpdb rather than messing with the DEBCONF_CONFIG environment
       variable.
     - Constify question_db_new instance parameter.
+    - If DEBCONF_NO_I18N=1 is set in the environment, ignore localised
+      fields in templates. This is a hack to let debconf-copydb and
+      debconf-dumpdb work with template databases produced by debconf.
 
  -- Colin Watson <cjwatson@debian.org>  Wed, 15 Jun 2005 16:16:34 +0100
 
